fix z-index, more query fine-tuning

--- a/frontend/src/Pages/SearchPage.module.scss
+++ b/frontend/src/Pages/SearchPage.module.scss
@@ -6,6 +6,10 @@
     & {
       margin-top: -64px;
     }
+
+    form input {
+      z-index: 10;
+    }
   }
 
   form {
